# polkadot-runtime-spec

./: .gitignore  polkadot_transactions.tex  polkadot_weights.tex
create_extrinsics/: Cargo.toml
create_extrinsics/src/: lib.rs
