[package]
name = "create_extrinsics"
version = "0.1.0"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kusama-runtime = { git = "https://github.com/lamafab/polkadot", branch = "tagged", features = ["std"] }
polkadot-primitives = { git = "https://github.com/lamafab/polkadot", branch = "tagged", features = ["std"] }
sp-core = { git = "https://github.com/lamafab/substrate", branch = "tagged", features = ["std"] }
sp-runtime = { git = "https://github.com/lamafab/substrate", branch = "tagged", features = ["std"] }
frame-system = { git = "https://github.com/lamafab/substrate", branch = "tagged", features = ["std"] }
tiny-bip39 = "0.7.0"
pallet-transaction-payment = { git = "https://github.com/lamafab/substrate", branch = "tagged", features = ["std"] }
parity-scale-codec = "1.1.2"